--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,21 @@ body{
   font-size: 20px;
 }
 
+#cabecera{
+  background: #33a;
+  color:  white;
+  margin: 0;
+  box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 0.5) ;
+  font-weight: bold;
+  padding: 0.5em;
+}
+
+#cabecera #tagline{
+  padding: 0 0 0 1em;
+  font-weight: normal;
+  font-size: 0.8em;
+}
+
 #container{
   width: 70%;
   padding: 1em;
